Fix nav on safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ header{
 }
 
 .n-logo{
-  margin-top: 19.1rem;
+  margin-top: 10rem;
   display: flex!important;
   justify-content : center!important;   
 }
